<resources>
    <string name="app_name">Crumbs</string>
    <string name="app_title">Crumbs</string>
    <string name="app_description">Your personal roadmap</string>

    <string name="tutorial_epic_title">Epics</string>
    <string name="tutorial_epic_description">are long-term goals you wish to achieve. They could take days, weeks or months.</string>
    <string name="tutorial_stories_title">Stories</string>
    <string name="tutorial_stories_description">are small tasks that will help you achieve your epic.</string>
    <string name="tutorial_roadmap_title">Roadmap</string>
    <string name="tutorial_roadmap_description">your very own way of navigating through life</string>

    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_create">Create</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_mark_complete">Mark as complete</string>
    <string name="btn_mark_incomplete">Mark as incomplete</string>

    <string name="epic_title_name">Epic Name</string>
    <string name="epic_title_description">Epic Description</string>
    <string name="epic_title_epic">New Epic</string>
    <string name="epic_title_completed">Completed Epics</string>
    <string name="epic_content_starter">Epics are long term goals which can take days, weeks or months to complete. Epics should be specific and achievable.</string>

    <string name="example_create_epic_description">Example: Complete the python course.</string>
    <string name="example_create_epic_title">Example: Learn how to code.</string>

    <string name="filter_all">All</string>
    <string name="filter_not_started">Not started</string>
    <string name="filter_paused">Paused</string>
    <string name="filter_in_progress">In Progress</string>
    <string name="filter_completed">Completed</string>

    <string name="text_no_epic_added">No epics found… \nCreate one to get started</string>
    <string name="text_no_completed_epic_added">No completed epics found…</string>
    <string name="text_no_stories_added">No stories for this epic has been added</string>
    <string name="text_today">Today</string>

    <string name="dialog_ok">OK</string>
    <string name="title_detail">Detail</string>
    <string name="title_created">Created</string>
    <string name="title_updated">Last Updated</string>
    <string name="title_status">Status</string>
    <string name="title_change_status">Change Status</string>
    <string name="title_created_at">Created At</string>
    <string name="title_completed_at">Completed At</string>

    <string name="title_properties">Properties</string>
    <string name="title_stories">Stories</string>

    <string name="get_started">Let\'s get started</string>

    <string name="btn_cancel">Cancel</string>

    <string name="sheet_description">What shall we call you? Note: All of your data is stored on your device only and not on our servers.</string>
    <string name="sheet_enter_name">Enter your name or nickname</string>

    <string name="dialog_create_story">Create a story</string>
    <string name="dialog_story_descriptions">Stories are small tasks to help complete your epic. They are specific and actionable items of work.</string>

    <string name="content_dashboard_add">Create a new epic</string>
    <string name="content_dashboard_completed">Access completed epics</string>
    <string name="content_back_button">Navigate to previous screen</string>
    <string name="content_delete_epic">Delete epic</string>
    <string name="content_add_story">Add a story to the epic</string>
    <string name="content_complete_epic">Complete epic</string>
    <string name="content_completed_story">Indicates whether story is complete or not</string>
    <string name="warning_epic_name">Name cannot be empty or exceed 16 characters</string>
    <string name="warning_epic_description">Description cannot be empty or exceed 36 characters</string>
</resources>
