<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.asadmansoor.crumbs.ui.active_epic.create.viewmodel.EpicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.active_epic.create.view.EpicFragment">

        <ImageButton
            android:id="@+id/btn_navigate_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/baseline_arrow_back_white_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_epic_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_back_button" />

        <TextView
            android:id="@+id/tv_epic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/epic_title_epic"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_epic_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_container"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/epic_content_starter"
            android:textColor="@color/colorWhite"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_epic_title" />

        <TextView
            android:id="@+id/tv_epic_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/epic_title_name"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_epic_content" />

        <EditText
            android:id="@+id/et_epic_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:hint="@string/example_create_epic_title"
            android:inputType="text|textCapSentences"
            android:text="@={viewModel.epicName}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_epic_name" />

        <TextView
            android:id="@+id/tv_name_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/warning_epic_name"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:visibility="@{viewModel.nameValid? View.GONE : View.VISIBLE}"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_epic_name" />

        <TextView
            android:id="@+id/tv_epic_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/epic_title_description"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_warning" />

        <EditText
            android:id="@+id/et_epic_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorWhite"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/example_create_epic_description"
            android:inputType="textMultiLine|textCapSentences"
            android:text="@={viewModel.epicDescription}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_epic_description" />

        <TextView
            android:id="@+id/tv_description_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/warning_epic_description"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:visibility="@{viewModel.descriptionValid? View.GONE : View.VISIBLE}"
            app:fontFamily="@font/nunito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_epic_description" />

        <Button
            android:id="@+id/btn_create_epic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="@drawable/drawable_button"
            android:textColor="@color/colorWhite"
            android:text="@string/btn_create"
            android:textAllCaps="false"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:paddingRight="60dp"
            android:paddingEnd="60dp"
            android:enabled="@{viewModel.nameValid &amp;&amp; viewModel.descriptionValid}"
            app:fontFamily="@font/nunito"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
